# rotation-estimation

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pixi.toml  pytest.toml  ruff.toml  ty.toml
.github/workflows/: master.yaml  test.yaml
scripts/: activate-ide-profile.sh  activate-ros-env.sh  create_cpp_node.py  format_cpp.py  lint_cpp.py  run-ros2-workspace.sh  run-zenohd.sh  run_sense_hat_udp.py
scripts/tests/: test_scripts.py
src/my_cpp_package/: CMakeLists.txt  package.xml
src/my_cpp_package/include/my_cpp_package/: my_cpp_node.hpp
src/my_cpp_package/src/: my_cpp_node.cpp  my_cpp_node_logic.cpp
src/my_cpp_package/test/: test_my_cpp_node.cpp
src/rotation_estimation/: CMakeLists.txt  package.xml
src/rotation_estimation/config/: params.yaml
src/rotation_estimation/include/rotation_estimation/: ekf_node.hpp  esekf.hpp  gyro_bias_sliding_window.hpp
src/rotation_estimation/launch/: ekf_node.launch.py
src/rotation_estimation/src/: ekf_node.cpp  ekf_node_main.cpp  esekf.cpp  gyro_bias_sliding_window.cpp
src/rotation_estimation/test/: launch_test_ekf_node.launch.py  test_ekf_node.cpp  test_esekf.cpp  test_gyro_bias_sliding_window.cpp
src/rotation_estimation_bringup/: CMakeLists.txt  package.xml  pixi.toml
src/rotation_estimation_bringup/config/: params.yaml
src/rotation_estimation_bringup/include/rotation_estimation_bringup/: manager_node.hpp
src/rotation_estimation_bringup/launch/: bringup.launch.py
src/rotation_estimation_bringup/src/: manager_main.cpp  manager_node.cpp
src/rotation_estimation_bringup/srv/: SetMockStrategy.srv  SetSystemMode.srv
src/rotation_estimation_bringup/test/: launch_test_bringup_stationary_identity.launch.py  launch_test_manager_node.launch.py  test_manager_node.cpp
src/rotation_estimation_nodes/: __init__.py  sensehat_imu_node.py
src/sense_hat/: imu_message.py  imu_strategy_factory.py  imu_strategy_protocol.py  sense_hat_imu_node.py  sense_hat_udp_publisher.py  stationary_imu_mock.py  udp_reader_imu_strategy.py  yaw_rotation_imu_mock.py
src/sense_hat/tests/unit/: test_imu_message.py  test_imu_strategy_factory.py  test_sense_hat_imu_node.py  test_sense_hat_udp_publisher.py  test_stationary_imu_mock.py  test_udp_reader_imu_strategy.py  test_yaw_rotation_imu_mock.py
src/sense_hat_bridge/: CMakeLists.txt  package.xml
src/sense_hat_bridge/config/: params.yaml
src/sense_hat_bridge/include/sense_hat_bridge/: imu_message.hpp  imu_strategy.hpp  imu_strategy_factory.hpp  sense_hat_node.hpp  stationary_imu_mock.hpp  udp_reader_imu_strategy.hpp  yaw_oscillation_imu_mock.hpp  yaw_rotation_imu_mock.hpp
src/sense_hat_bridge/launch/: sense_hat_node.launch.py
src/sense_hat_bridge/src/: imu_message.cpp  imu_strategy_factory.cpp  sense_hat_node.cpp  sense_hat_node_main.cpp  stationary_imu_mock.cpp  udp_reader_imu_strategy.cpp  yaw_oscillation_imu_mock.cpp  yaw_rotation_imu_mock.cpp
src/sense_hat_bridge/test/: __init__.py  launch_test_sense_hat_node.launch.py  test_imu_strategies.cpp  test_sense_hat_node.cpp
src/sensehat_udp_sidecar/: sensehat_udp_reader.py
